--- a/De_Tai__so_5/src/de_tai__so_5/ChinhSuaDatPhong.form
+++ b/De_Tai__so_5/src/de_tai__so_5/ChinhSuaDatPhong.form
@@ -195,6 +195,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtMaPhong">
+          <Properties>
+            <Property name="editable" type="boolean" value="false"/>
+          </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="btnChinhSua">
           <Properties>
