--- a/De_Tai__so_5/src/de_tai__so_5/ChinhSuaPhongForm.form
+++ b/De_Tai__so_5/src/de_tai__so_5/ChinhSuaPhongForm.form
@@ -206,6 +206,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtSua">
+          <Events>
+            <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtSuaFocusLost"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnHienThi">
           <Properties>
@@ -282,6 +285,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtGia">
+          <Events>
+            <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtGiaFocusLost"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnChinhSua">
           <Properties>
