--- a/De_Tai__so_5/src/de_tai__so_5/LocThongTinPhong.form
+++ b/De_Tai__so_5/src/de_tai__so_5/LocThongTinPhong.form
@@ -154,8 +154,10 @@
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
-                      <Component id="HTSoTang" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="timSoTang" min="-2" pref="44" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="timSoTang" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
+                          <Component id="HTSoTang" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
                   <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
