--- a/De_Tai__so_5/src/de_tai__so_5/LocThongTinPhong.form
+++ b/De_Tai__so_5/src/de_tai__so_5/LocThongTinPhong.form
@@ -456,6 +456,7 @@
             <Property name="text" type="java.lang.String" value="Hi&#x1ec3;n th&#x1ecb;"/>
           </Properties>
           <Events>
+            <EventHandler event="mouseDragged" listener="java.awt.event.MouseMotionListener" parameters="java.awt.event.MouseEvent" handler="HTloaiPhongMouseDragged"/>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="HTloaiPhongMouseClicked"/>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="HTloaiPhongActionPerformed"/>
           </Events>
